# harzad_bot

./: .env.example  .gitignore  alembic.ini  conversation states  donwload_test.py  main.py  pyproject.toml  requirements.txt
bot/conversations/: main.py
bot/handlers/: final.py  first.py  help.py  second.py  start.py
bot/handlers/ai/: before_chat.py  before_tti.py  chat.py  main.py  tti.py
bot/handlers/instagram/: before_download.py  download.py  main.py
bot/handlers/muisc/: main.py
bot/handlers/muisc/spotify/: download.py  main.py
bot/handlers/music/: main.py
bot/handlers/music/spotify/: download.py  main.py
bot/handlers/pinterest/: download.py  main.py
bot/handlers/youtube/: before_download.py  before_mp3.py  download.py  main.py  mp3.py
configurations/: settings.py
connectors/: db.py  spotdl.py  sqlite.py
cruds/: log.py  user.py
migrations/: env.py
migrations/versions/: 45e412a5a4d7_user.py  8a3856139de3_log.py  bdfec91bbb07_user.py  df8b87b225dc_user.py
models/: User.py  log.py  user.py
utils/: InstagramClient.py  Spotidl.py  custom_context.py  decorators.py  helpers.py  instagram.py  keyboards.py  logger.py  shared_handlers.py
utils/constants/: __init__.py  keyboards.py  messages.py  states.py
utils/exceptions/: instagram.py
